fixed homepage title and play button wrapping on smaller res screen

--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -21,17 +21,17 @@
   .homepage_body{
     height: 100vh;
     background: linear-gradient(#e34e24, #e3ae24);
-    background-size: 300% 300%;
+    background-size: 250% 250%;
     max-height: 100%;
     margin-top: -96px;
-    animation: color 12s ease-in-out infinite;
+    animation: color 6s ease-in-out infinite;
   }
   @keyframes color{
     0%{
       background-position: 0 0;
     }
     50%{
-      background-position: 0 50%;
+      background-position: 0 100%;
     }
     100%{
       background-position: 0 0;
@@ -52,14 +52,15 @@
 
   .title {
     font-family: 'Agbalumo';
-    font-size: 10vh;
+    font-size: 15vmin;
     position: absolute;
     padding-top: 96px;
     top: 25%;
     left: 50%;
     user-select: none;
     transform: translate(-50%, -50%);
-    
+    letter-spacing: -3px;
+    white-space: nowrap;
   }
 
   .covidContainer {
